--- a/egs/an4/asr1/conf/queue.conf
+++ b/egs/an4/asr1/conf/queue.conf
@@ -8,3 +8,15 @@ option max_jobs_run=* -tc $0
 default gpu=0
 option gpu=0
 option gpu=* -l gpu=$0 -q g.q
+
+# Default configuration
+command qsub -v PATH -cwd -S /bin/bash -j y -P nst
+option mem=* -l mem_free=$0,ram_free=$0
+option mem=0          # Do not add anything to qsub_opts
+option num_threads=* -pe smp $0
+option num_threads=1  # Do not add anything to qsub_opts
+option max_jobs_run=* -tc $0
+default gpu=0
+option gpu=0 -l qp=low -l osrel='*' -tc 256 -l not_host=air112 -l not_host=air098 -l not_host=air120
+option gpu=1 -l qp=cuda-low -l osrel='*' -l gpuclass='pascal'
+# option gpu=1 -l qp=cuda-low -l osrel='*' -l gpuclass='*' -l hostname=air208
