--- a/egs/an4/asr1/conf/train_mtlalpha0.0.yaml
+++ b/egs/an4/asr1/conf/train_mtlalpha0.0.yaml
@@ -4,12 +4,12 @@ maxlen-in: 800  # if input length  > maxlen_in, batchsize is automatically reduc
 maxlen-out: 150 # if output length > maxlen_out, batchsize is automatically reduced
 # optimization related
 sortagrad: 0 # Feed samples from shortest to longest ; -1: enabled for all epochs, 0: disabled, other: enabled for 'other' epochs
-opt: adadelta
+opt: adam
 epochs: 40
 patience: 5
 
 # scheduled sampling option
-sampling-probability: 0.1
+sampling-probability: 0.5
 
 # encoder related
 etype: blstmp     # encoder architecture type
