solve dataparallel bug

--- a/egs/an4/asr1/conf/slurm.conf
+++ b/egs/an4/asr1/conf/slurm.conf
@@ -1,5 +1,6 @@
 # Default configuration
-command sbatch --export=PATH
+command sbatch --export=PATH --no-requeue
+option --account=MLMI-xy316-SL2-CPU
 option name=* --job-name $0
 option time=* --time $0
 option mem=* --mem-per-cpu $0
@@ -7,8 +8,10 @@ option mem=0
 option num_threads=* --cpus-per-task $0
 option num_threads=1 --cpus-per-task 1
 option num_nodes=* --nodes $0
+option --nodes=1
 default gpu=0
-option gpu=0 -p cpu
-option gpu=* -p gpu --gres=gpu:$0 -c $0  # Recommend allocating more CPU than, or equal to the number of GPU
+option gpu=0 -p skylake-himem
+#option gpu=1 -p pascal --exclusive
+option gpu=* -p pascal --gres=gpu:$0 -c $0   # Recommend allocating more CPU than, or equal to the number of GPU
 # note: the --max-jobs-run option is supported as a special case
 # by slurm.pl and you don't have to handle it in the config file.
